--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "Lua.diagnostics.globals": [
         "clockDisplay",
-        "love"
+        "love",
+        "x1",
+        "x2",
+        "x3",
+        "x4"
     ]
 }
