--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,26 @@
         "x1",
         "x2",
         "x3",
-        "x4"
+        "x4",
+        "mx",
+        "my",
+        "pressStartAU",
+        "mainMenuLockout",
+        "mainMenuText",
+        "cuboidClick",
+        "conditional",
+        "menuHint",
+        "gameScore",
+        "highScore",
+        "time",
+        "timer",
+        "allowCountDown",
+        "gameOverText",
+        "cpsText",
+        "retryText",
+        "highScoreText",
+        "red",
+        "blue",
+        "green"
     ]
 }
