Fixed font scaling issues. Added menu music

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "red",
         "blue",
         "green",
-        "drawObjectsList"
+        "drawObjectsList",
+        "menuAU"
     ]
 }
