added menu *buttons*

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,8 @@
         "blue",
         "green",
         "drawObjectsList",
-        "menuAU"
+        "menuAU",
+        "font",
+        "fontVariable"
     ]
 }
