fulfilled todo list: sfx added, scaling issues fixed, added a menu with controls and credits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,18 @@
         "drawObjectsList",
         "menuAU",
         "font",
-        "fontVariable"
+        "fontVariable",
+        "menuArrows",
+        "waiting",
+        "waitingTime",
+        "allowDisplayMenu",
+        "pressedA",
+        "pressedD",
+        "blinkTime",
+        "infiniteTimer",
+        "textA",
+        "textD",
+        "startupSequence",
+        "menuButtons"
     ]
 }
